--- a/02/index.html
+++ b/02/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
     <title></title>
-</body>
-<head>
 
+<head><</head>
+<body>
 <p> hola ! </p>
-
-</head>
+</body>
 </html>
+
+
