--- a/14/index.html
+++ b/14/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-	<a href="www.desafiolatam.com">link a Desafío Latam!</a>
-	<img alt="../logo.png">
+	<a href="www.desafiolatam.com"><img src="../images/logo.png">link a Desafío Latam!</a>
+	
 
 </body>
 </html>
