--- a/17/index.html
+++ b/17/index.html
@@ -2,19 +2,21 @@
 <html>
 <head>
 	<title></title>
-<body>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="">
+	</head>
+	<body>
 	<h1> Hola </h2>
 
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet voluptate voluptas odit, sapiente soluta consectetur consequuntur ex est dolores laboriosam repudiandae unde repellat velit quo voluptatibus consequatur perferendis, tempore sunt!
 	</p>
 
-	<a href="desafiolatam.com" ><img alt="../images/logo.png"> </a>
+	<a href="https://desafiolatam.com" ><img src="../images/logo.png"> </a>
 
 	<p>
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste ex, enim ipsum sequi. Dignissimos libero unde repellendus fugit quidem asperiores, veritatis aliquid vel, a eveniet praesentium labore quia dolor, accusamus?
 	</p>
 </body>
-</head>
 <html>
+
+
