--- a/20/index.html
+++ b/20/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <head> Go Green </head>
+	<title>Go Green</title>
+   <meta charset="utf-8">
 </head>
 <body>
     <p> Hellowww </p>
