--- a/22/index.html
+++ b/22/index.html
@@ -2,12 +2,11 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<style="color:yellow">
 </head>
 <body>
 	<div>
 		<p> Hellowww </p>
-		<p class="color:red"> Lorem ipsum dolor sit amet. </p>
+		<p style="color:red"> Lorem ipsum dolor sit amet. </p>
 	</div>
 </body>
 </html>
