--- a/19/index.html
+++ b/19/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
 </head>
 <body>
-    <div style="color:yellow">
-        <p> Goooooood byeeeee !! </p>
+    <div >
+        <p style="color:red"> Goooooood byeeeee !! </p>
         <p> Holaaaa !!! </p>
     </div>
 </body>
