--- a/24/index.html
+++ b/24/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<style>
-		p {
-			color: red;
+		div{
+			background-color: yellow	
 		}
 	</style>
 </head>
@@ -13,7 +13,7 @@
 		<p> Hellowww </p>
 	</div>
 	<div>
-		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		<p style="color:pink"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
