--- a/25/index.html
+++ b/25/index.html
@@ -2,6 +2,14 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<style>
+		img {
+
+			width: 500px;
+			display: block;
+		}
+
+	</style>
 	<title></title>
 </head>
 <body>
