--- a/26/index.html
+++ b/26/index.html
@@ -4,12 +4,12 @@
 	<meta charset="utf-8">
 	<title></title>
 	<style>
-		font-family: 'Slabo 27px', serif;
+		h1 {font-family: 'Slabo 27px', serif;}
 	</style>
 </head>
 <body>
 
-	<img src="images/logo.png" alt="logo desafio latam" >
+	<img src="../images/logo.png" alt="logo desafio latam" >
 	<h1> Deafío Latam </h1>
 	<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam quaerat beatae architecto possimus explicabo ex, temporibus, reprehenderit, deserunt alias excepturi quidem molestias, magnam hic asperiores sapiente animi. Ex, provident, consectetur! </p>
 	<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
