--- a/25/index.html
+++ b/25/index.html
@@ -2,20 +2,13 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<style>
-		img {
 
-			width: 500px;
-			display: block;
-		}
-
-	</style>
 	<title></title>
 </head>
 <body>
 
-	<img src="../images/logo.png" alt="logo desafio latam" >
-	<img src="../images/logo.png" alt="logo desafio latam" >
+	<img style="width: 500px; height: 500px" src="../images/logo.png" alt="logo desafio latam" >
+	<img style="max-width: 500px; max-height: 500px" src="../images/logo.png" alt="logo desafio latam" >
 
 </body>
 </html>
